[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "iib-tekton-utils"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "tenacity",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4",
    "pytest-mock>=3.12",
    "pyyaml>=6.0",
    "tenacity",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".git", ".idea", ".tox", ".venv", "__pycache__"]

[tool.setuptools.packages.find]
where = ["."]
